--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
       <li><input type="checkbox" /> Apply for jobs</li>
     </ul>
   </div>
-  <img src="image.jpg",alt="image related to the to do list">
+  <img src="image.jpg",alt="image related to the to do lists">
 </body>
 </html>
