--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body Style= "background-color: grey";>
   <div class="todo-container">
-    <h1>My To-Do List</h1>
+    <h1>My To-Do List color:navy blue;</h1>
     <ul class="todo-list">
       <li><input type="checkbox" /> Learn HTML & CSS</li>
       <li><input type="checkbox" /> Build a portfolio</li>
