--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>To-Do List</title>
   <link rel="stylesheet" href="todo styles.css" />
 </head>
-<body Style= "background-color: grey";>
+<body Style= "background-color: white";>
   <div class="todo-container">
     <h1>My To-Do List color:navy blue;</h1>
     <ul class="todo-list">
